--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <img class="people" src="/img/people.png" alt="people">
+                <img class="people" src="img/people.png" alt="people">
                 <div class="title">
                     <p>
                         Hi
@@ -37,7 +37,7 @@
                     </p>
                     <h1 class="name">William</h1>
                     <div class="btn">
-                        <a href="#">contact me <img class="arrow" src="/img/arrow_outward.svg" alt="arrow"></a>
+                        <a href="#">contact me <img class="arrow" src="img/arrow_outward.svg" alt="arrow"></a>
                     </div>
                 </div>
             </div>
@@ -53,14 +53,14 @@
                             Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful and
                             responsive websites that provide an optimal user experience.
                         </p>
-                        <img src="/img/sparkle-sm.png" alt="sparkle-sm">
-                        <img class="sparkle-medium" src="/img/sparkle-sm.png" alt="sparkle-sm">
-                        <img src="/img/sparkle-sm.png" alt="sparkle-sm">
+                        <img src="img/sparkle-sm.png" alt="sparkle-sm">
+                        <img class="sparkle-medium" src="img/sparkle-sm.png" alt="sparkle-sm">
+                        <img src="img/sparkle-sm.png" alt="sparkle-sm">
                     </div>
                     <div class="section-right">
-                        <img src="/img/sparkle.png" alt="sparkle">
-                        <img src="/img/photographer.png" alt="photographer">
-                        <img src="/img/people-2.png" alt="people-2">
+                        <img src="img/sparkle.png" alt="sparkle">
+                        <img src="img/photographer.png" alt="photographer">
+                        <img src="img/people-2.png" alt="people-2">
                     </div>
                 </div>
             </div>
@@ -103,12 +103,12 @@
             <div class="container">
                 <div class="contact-content">
                     <h2>Contact me</h2>
-                    <img class="right-arrow" src="/img/trending_flat_black_24dp 1.png" alt="
+                    <img class="right-arrow" src="img/trending_flat_black_24dp 1.png" alt="
                     right-arrow">
                     <ul class="social">
-                        <li><a href="#"><img src="/img/discord.png" alt=""></a></li>
-                        <li><a href="#"><img src="/img/instagram.png" alt=""></a></li>
-                        <li><a href="#"><img src="/img/message.png" alt=""></a></li>
+                        <li><a href="#"><img src="img/discord.png" alt=""></a></li>
+                        <li><a href="#"><img src="img/instagram.png" alt=""></a></li>
+                        <li><a href="#"><img src="img/message.png" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -116,19 +116,19 @@
         <div class="porject container">
             <h2>My Projects</h2>
             <div class="porject-content">
-                <img src="/img/Rectangle 10.png" alt="">
+                <img class="porject-1" src="img/Rectangle 10.png" alt="">
                 <div>
                     <div class="porject-2">
-                        <img src="/img/Rectangle 15.png" alt="">
+                        <img src="img/Rectangle 15.png" alt="">
                         <div class="porject-2-content">
                             <p>I've worked on a variety of websites, including e-commerce sites, blogs, and landing
                                 pages. I take pride in creating clean, efficient, and user-friendly code.</p>
-                            <a href="#">SEE MORE <img class="arrow" src="/img/arrow_outward-white.png" alt="arrow"></a>
+                            <a href="#">SEE MORE <img class="arrow" src="img/arrow_outward-white.png" alt="arrow"></a>
                         </div>
                     </div>
                     <div class="porject-3">
-                        <img src="/img/Rectangle 14.png" alt="Rectangle-14">
-                        <img src="/img/Rectangle 29.png" alt="Rectangle-29">
+                        <img src="img/Rectangle 14.png" alt="Rectangle-14">
+                        <img src="img/Rectangle 29.png" alt="Rectangle-29">
                     </div>
                 </div>
             </div>
