--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 <body>
     <nav class="nav">
-        <div class="container">
-            <ul>
+            <ul class="container">
                 <li><a href="#">WILLIAM LEE</a></li>
                 <li><a href="#">BASED IN TAIWAN</a></li>
                 <li><a href="#">CURRENTLY FRONT END
@@ -22,7 +21,6 @@
                         ENGINEER AT HEXSCHOOL</a></li>
                 <li><a href="#">CONTACT ME</a></li>
             </ul>
-        </div>
     </nav>
 
     <header class="header">
@@ -36,8 +34,8 @@
                         I’m a front-end developer
                     </p>
                     <h1 class="name">William</h1>
-                    <div class="btn">
-                        <a href="#">contact me <img class="arrow" src="img/arrow_outward.svg" alt="arrow"></a>
+                    <div class="btn-flex">
+                        <a class="btn" href="#">contact me <img class="arrow" src="img/arrow_outward.svg" alt="arrow"></a>
                     </div>
                 </div>
             </div>
@@ -105,11 +103,11 @@
                     <h2>Contact me</h2>
                     <img class="right-arrow" src="img/trending_flat_black_24dp 1.png" alt="
                     right-arrow">
-                    <ul class="social">
+                    <ol class="social">
                         <li><a href="#"><img src="img/discord.png" alt=""></a></li>
                         <li><a href="#"><img src="img/instagram.png" alt=""></a></li>
                         <li><a href="#"><img src="img/message.png" alt=""></a></li>
-                    </ul>
+                    </ol>
                 </div>
             </div>
         </div>
@@ -123,7 +121,7 @@
                         <div class="porject-2-content">
                             <p>I've worked on a variety of websites, including e-commerce sites, blogs, and landing
                                 pages. I take pride in creating clean, efficient, and user-friendly code.</p>
-                            <a href="#">SEE MORE <img class="arrow" src="img/arrow_outward-white.png" alt="arrow"></a>
+                            <a class="btn" href="#">SEE MORE <img class="arrow" src="img/arrow_outward-white.png" alt="arrow"></a>
                         </div>
                     </div>
                     <div class="porject-3">
