--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
     <nav class="nav">
-            <ul class="container">
-                <li><a href="#">WILLIAM LEE</a></li>
-                <li><a href="#">BASED IN TAIWAN</a></li>
-                <li><a href="#">CURRENTLY FRONT END
-                        <br>
-                        ENGINEER AT HEXSCHOOL</a></li>
-                <li><a href="#">CONTACT ME</a></li>
-            </ul>
+        <ul class="container">
+            <li><a href="#">WILLIAM LEE</a></li>
+            <li><a href="#">BASED IN TAIWAN</a></li>
+            <li><a href="#">CURRENTLY FRONT END
+                    <br>
+                    ENGINEER AT HEXSCHOOL</a></li>
+            <li><a href="#">CONTACT ME</a></li>
+        </ul>
     </nav>
 
     <header class="header">
@@ -35,7 +35,8 @@
                     </p>
                     <h1 class="name">William</h1>
                     <div class="btn-flex">
-                        <a class="btn" href="#">contact me <img class="arrow" src="img/arrow_outward.svg" alt="arrow"></a>
+                        <a class="btn" href="#">contact me <img class="arrow" src="img/arrow_outward.svg"
+                                alt="arrow"></a>
                     </div>
                 </div>
             </div>
@@ -65,7 +66,7 @@
         </div>
         <div class="about-me container">
             <div class="about-me-content">
-                <ul class="cards">
+                <ol class="cards">
                     <li class="card">
                         <h3>01</h3>
                         <h3>Attention to Detail</h3>
@@ -86,7 +87,7 @@
                         <h3>Team Player</h3>
                         <p>Collaborates and shares ideas.</p>
                     </li>
-                </ul>
+                </ol>
                 <div class="about-me-title">
                     <h2>About me</h2>
                     <p>
@@ -100,14 +101,16 @@
         <div class="contact">
             <div class="container">
                 <div class="contact-content">
-                    <h2>Contact me</h2>
-                    <img class="right-arrow" src="img/trending_flat_black_24dp 1.png" alt="
-                    right-arrow">
-                    <ol class="social">
+                    <div class="social">
+                        <h2>Contact me</h2>
+                        <img class="right-arrow" src="img/trending_flat_black_24dp 1.png" alt="
+                        right-arrow">
+                    </div>
+                    <ul class="social-icon">
                         <li><a href="#"><img src="img/discord.png" alt=""></a></li>
                         <li><a href="#"><img src="img/instagram.png" alt=""></a></li>
                         <li><a href="#"><img src="img/message.png" alt=""></a></li>
-                    </ol>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -121,7 +124,8 @@
                         <div class="porject-2-content">
                             <p>I've worked on a variety of websites, including e-commerce sites, blogs, and landing
                                 pages. I take pride in creating clean, efficient, and user-friendly code.</p>
-                            <a class="btn" href="#">SEE MORE <img class="arrow" src="img/arrow_outward-white.png" alt="arrow"></a>
+                            <a class="btn" href="#">SEE MORE <img class="arrow" src="img/arrow_outward-white.png"
+                                    alt="arrow"></a>
                         </div>
                     </div>
                     <div class="porject-3">
