--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                 </div>
             </div>
         </div>
-        <div class="contact">
+        <div class="socia">
             <div class="container">
-                <div class="contact-content">
-                    <div class="social">
+                <div class="socia-content">
+                    <div class="contact">
                         <h2>Contact me</h2>
                         <img class="right-arrow" src="img/trending_flat_black_24dp 1.png" alt="
                         right-arrow">
