--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
     <nav class="nav">
         <ul class="container">
-            <li><a href="#">WILLIAM LEE</a></li>
-            <li><a href="#">BASED IN TAIWAN</a></li>
-            <li><a href="#">CURRENTLY FRONT END
-                    <br>
-                    ENGINEER AT HEXSCHOOL</a></li>
+            <li>WILLIAM LEE</li>
+            <li>BASED IN TAIWAN</li>
+            <li>CURRENTLY FRONT END
+                <br>
+                ENGINEER AT HEXSCHOOL
+            </li>
             <li><a href="#">CONTACT ME</a></li>
         </ul>
     </nav>
@@ -137,11 +138,9 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="container">
-            <p>
-                all rights reserved @hexschool2023
-            </p>
-        </div>
+        <p>
+            all rights reserved @hexschool2023
+        </p>
     </footer>
 </body>
 
